[gd_scene load_steps=15 format=3 uid="uid://dks46e1uxjyh3"]

[ext_resource type="Script" path="res://Scenes/Effects/bomb.gd" id="1_vnb65"]
[ext_resource type="Texture2D" uid="uid://dryx4sxkxc4hj" path="res://Art/bomb.png" id="2_jg6s2"]
[ext_resource type="Texture2D" uid="uid://brt3lb7b3e36j" path="res://Art/bombHit.png" id="3_rwqnt"]

[sub_resource type="CircleShape2D" id="CircleShape2D_f4dv4"]
radius = 4.0

[sub_resource type="AtlasTexture" id="AtlasTexture_n781f"]
atlas = ExtResource("2_jg6s2")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_r6to7"]
atlas = ExtResource("2_jg6s2")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_u8xir"]
animations = [{
"frames": [{
"duration": 3.0,
"texture": SubResource("AtlasTexture_n781f")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_r6to7")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_4sqbp"]
atlas = ExtResource("3_rwqnt")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8a0aw"]
atlas = ExtResource("3_rwqnt")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_858tl"]
atlas = ExtResource("3_rwqnt")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3q0af"]
atlas = ExtResource("3_rwqnt")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_s6vkq"]
atlas = ExtResource("3_rwqnt")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xfxk"]
atlas = ExtResource("3_rwqnt")
region = Rect2(80, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_okyji"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4sqbp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8a0aw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_858tl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3q0af")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s6vkq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1xfxk")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Bomb" type="Node2D"]
script = ExtResource("1_vnb65")

[node name="HitboxBomb" type="Area2D" parent="."]
collision_layer = 12
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxBomb"]
shape = SubResource("CircleShape2D_f4dv4")

[node name="BombSprite" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_u8xir")
frame_progress = 0.969866

[node name="SplashSprite" type="AnimatedSprite2D" parent="."]
visible = false
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_okyji")
frame_progress = 0.670595

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="area_entered" from="HitboxBomb" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="HitboxBomb" to="." method="_on_hitbox_body_entered"]
